crates/rustynes-test-harness/tests/snapshots/external_extended__extended_taito_x1_005_kyoto_ryuu.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-080-TaitoX1-005/Kyoto Ryuu no Tera Satsujin Jiken (Japan).nes
rom_sha256=de8c4e471aad07647a3a78f93a64c82bc137b04dd4529e5ea130b9774a787618
frames=600
fb_bytes=245760
cycles=17838525
audio_samples=439524
audio_fnv1a64=2e09e10cabc8da24
checkpoint f600 fb_fnv1a64=85028bd3c04ad26d
