crates/rustynes-test-harness/tests/snapshots/external_extended__extended_uxrom_1943.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-002-UxROM/1943 - The Battle of Midway.nes
rom_sha256=cb33e8ce2dbd22bb8c97f976dc72f333e41a421b05afa65e335ca34d3c892a9d
frames=600
fb_bytes=245760
cycles=17838524
audio_samples=439524
audio_fnv1a64=92166e5ef64bbb43
checkpoint f600 fb_fnv1a64=971301cdbe0faed6
