crates/rustynes-test-harness/tests/snapshots/external_extended__extended_uxrom_jackal.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-002-UxROM/Jackal.nes
rom_sha256=632c4a3f76e7a38e9b743e281dfb83441a796d8ecb973f77cb617d25ec902cba
frames=600
fb_bytes=245760
cycles=17838524
audio_samples=439524
audio_fnv1a64=3121fadc43137e50
checkpoint f600 fb_fnv1a64=3bef06c38b9fd389
