crates/rustynes-test-harness/tests/snapshots/external_extended__extended_uxrom_rygar.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-002-UxROM/Rygar.nes
rom_sha256=8ea8b1218cd94dfca894302a046db88670a61155f968d3fc2e4612629f2b5c75
frames=600
fb_bytes=245760
cycles=17838523
audio_samples=439524
audio_fnv1a64=dda9e74ae2696052
checkpoint f600 fb_fnv1a64=f02d64b4d65a02bb
